# Sztreamerr

./: BUILD_APK.md  BUILD_INSTRUCTIONS.py  README.md  buildozer-minimal.spec  buildozer.spec  pyproject.toml
.github/workflows/: build-apk.yml
docs/: PLAN.md
src/: __init__.py
src/capture/: __init__.py  backend.py  me.py
src/core/: __init__.py
