[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sztreamerr"
version = "0.1.0-dev"
description = "A lightweight IP camera streamer mainly for phones"
license = { text = "MIT" }
requires-python = ">=3.10,<4.0"
dependencies = [
    "opencv-python-headless>=4.8,<5",
    "aiohttp>=3.9,<4",
]

[tool.setuptools.packages.find]
include = ["src*"]
namespaces = false
